例の値を修正
