# src/handlers/database/table/info.rs
@@ -16,6 +16,10 @@ use crate::{
 #[utoipa::path(
     get,
     path = "/databases/{db_name}/tables/{table_name}",
+    params(
+        ("db_name" = String, Path, description = "データベース名", example = "example_database"),
+        ("table_name" = String, Path, description = "テーブル名", example = "example_table")
+    ),
     responses(
         (status = 200, body = TableInfoResponse),
         (status = 404, description = "テーブルまたはデータベースが存在しない")
