# src/handlers/database/table/remove.rs
@@ -14,6 +14,10 @@ use axum::Extension;
 #[utoipa::path(
     delete,
     path = "/databases/{db_name}/tables/{table_name}",
+    params(
+        ("db_name" = String, Path, description = "データベース名", example = "example_database"),
+        ("table_name" = String, Path, description = "テーブル名", example = "example_table")
+    ),
     responses(
         (status = 204),
         (status = 404, description = "テーブルが存在しない")
